--- a/cheatsheets/cheatsheetHTMLCSS/style.css
+++ b/cheatsheets/cheatsheetHTMLCSS/style.css
@@ -1,3 +1,15 @@
 .title {
   text-align: center;
 }
+.center {
+  margin-left: auto;
+  margin-right: auto;
+}
+table,
+th,
+td {
+  border: 1px solid black;
+}
+.HTMLtag {
+  text-align: center;
+}
